--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="normal">#e2e8f0</color>
+    <color name="answer">#22c55e</color>
+    <color name="wrong_answer">#94a3b8</color>
+    <color name="different">#eab308</color>
+
+
 </resources>
