--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="answer">#22c55e</color>
     <color name="wrong_answer">#94a3b8</color>
     <color name="different">#eab308</color>
+    <color name="questionBox">#e0e7ff</color>
+    <color name="question">#4338ca</color>
+
 
 
 </resources>
