--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1299,15 +1299,20 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/keyboard0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/q_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
@@ -1342,6 +1347,8 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/w_button"
+            android:layout_weight="1"
+
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
@@ -1376,6 +1383,8 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/e_button"
+            android:layout_weight="1"
+
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
@@ -1409,6 +1418,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/r_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
+
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
@@ -1442,6 +1453,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/t_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
+
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:backgroundTint="@color/normal"
@@ -1475,6 +1488,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/y_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
+
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
@@ -1508,6 +1523,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/u_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
+
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
@@ -1541,6 +1558,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/i_button"
             android:layout_width="35dp"
+            android:layout_weight="1"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
@@ -1572,6 +1590,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/delete_button"
             android:layout_width="50dp"
+            android:layout_weight="1"
+
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
@@ -1604,17 +1624,21 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/keyboard1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:visibility="gone"
         >
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/a_button"
             android:layout_width="35dp"
             android:layout_height="50dp"
+            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
@@ -1649,6 +1673,7 @@
             android:id="@+id/s_button"
             android:layout_width="35dp"
             android:layout_height="50dp"
+            android:layout_weight="1"
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
@@ -1681,6 +1706,8 @@
             android:id="@+id/d_button"
             android:layout_width="35dp"
             android:layout_height="50dp"
+            android:layout_weight="1"
+
             android:layout_marginStart="5dp"
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
@@ -1714,6 +1741,8 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
+
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1746,6 +1775,8 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
+
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1778,6 +1809,8 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
+
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1810,6 +1843,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1842,6 +1876,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1874,6 +1909,8 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
+
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1905,19 +1942,21 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/keyboard2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-
-
-        >
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:visibility="gone">
 
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/z_button"
             android:layout_width="35dp"
             android:layout_height="50dp"
+            android:layout_weight="1"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
@@ -1954,6 +1993,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
             android:onClick="@{viewModel::keyboardOnClick}"
@@ -1987,6 +2027,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:onClick="@{viewModel::keyboardOnClick}"
             android:clipToPadding="true"
@@ -2020,6 +2061,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:onClick="@{viewModel::keyboardOnClick}"
             android:clipToPadding="true"
@@ -2053,6 +2095,8 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
+
             app:cardBackgroundColor="@color/normal"
             android:onClick="@{viewModel::keyboardOnClick}"
             android:clipToPadding="true"
@@ -2086,6 +2130,7 @@
             android:layout_width="35dp"
             android:layout_height="50dp"
             android:layout_marginStart="5dp"
+            android:layout_weight="1"
             app:cardBackgroundColor="@color/normal"
             android:onClick="@{viewModel::keyboardOnClick}"
             android:clipToPadding="true"
@@ -2122,6 +2167,7 @@
             app:cardBackgroundColor="@color/normal"
             android:onClick="@{viewModel::keyboardOnClick}"
             android:clipToPadding="true"
+            android:layout_weight="1"
             app:cardCornerRadius="8dp">
 
             <LinearLayout
@@ -2150,10 +2196,11 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/submit_button"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="46dp"
             android:layout_marginStart="5dp"
-            app:cardBackgroundColor="@color/normal"
             android:clipToPadding="true"
+            app:cardBackgroundColor="@color/normal"
+            android:layout_weight="1"
             app:cardCornerRadius="8dp">
 
             <LinearLayout
@@ -2177,6 +2224,124 @@
 
 
         </com.google.android.material.card.MaterialCardView>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/endGame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+
+        >
+
+
+
+        <TextView
+            android:id="@+id/answer_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_margin="15dp"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="120dp"
+                android:layout_height="70dp"
+                android:layout_margin="20dp"
+                android:clipToPadding="true"
+                app:cardBackgroundColor="@color/normal"
+                app:cardCornerRadius="8dp"
+                app:strokeColor="@color/normal"
+                app:strokeWidth="1dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="내일의 문제"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/next_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="00:00:00"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center"
+                        android:textSize="16sp" />
+
+
+                </LinearLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="120dp"
+                android:layout_height="70dp"
+                android:layout_margin="20dp"
+                android:clipToPadding="true"
+                app:cardBackgroundColor="@color/normal"
+                app:cardCornerRadius="8dp"
+                app:strokeColor="@color/normal"
+                app:strokeWidth="1dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="다시 풀기"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:layout_gravity="center"/>
+
+
+
+
+                </LinearLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
