--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1307,7 +1307,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/q_button"
@@ -1631,7 +1631,7 @@
         android:orientation="horizontal"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:visibility="gone"
+        android:visibility="visible"
         >
 
         <com.google.android.material.card.MaterialCardView
@@ -1949,7 +1949,7 @@
         android:gravity="center"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
         <com.google.android.material.card.MaterialCardView
@@ -2237,6 +2237,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:visibility="gone"
 
         >
 
@@ -2302,6 +2303,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/unravel_again_btn"
                 android:layout_width="120dp"
                 android:layout_height="70dp"
                 android:layout_margin="20dp"
