--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,47 @@
     <color name="questionBox">#e0e7ff</color>
     <color name="question">#4338ca</color>
 
+    <!-- 배경색-->
+    <color name="bg_screen0">#92c0f4</color>
+    <color name="bg_screen1">#92c0f4</color>
+    <color name="bg_screen2">#92c0f4</color>
+    <color name="bg_screen3">#92c0f4</color>
+    <color name="bg_screen4">#92c0f4</color>
+    <color name="bg_screen5">#92c0f4</color>
+
+    <!-- 선택되지 않은 점(선택 되지 않은 페이지 점) -->
+    <color name="dot_dark_screen0">#2D717A</color>
+    <color name="dot_dark_screen1">#2D717A</color>
+    <color name="dot_dark_screen2">#2D717A</color>
+    <color name="dot_dark_screen3">#2D717A</color>
+    <color name="dot_dark_screen4">#2D717A</color>
+    <color name="dot_dark_screen5">#2D717A</color>
+
+    <!-- 선택된 점(해당 페이지 일 때) -->
+    <color name="dot_light_screen0">#64E7FF</color>
+    <color name="dot_light_screen1">#64E7FF</color>
+    <color name="dot_light_screen2">#64E7FF</color>
+    <color name="dot_light_screen3">#64E7FF</color>
+    <color name="dot_light_screen4">#64E7FF</color>
+    <color name="dot_light_screen5">#64E7FF</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen0</item>
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+        <item>@color/dot_light_screen5</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen0</item>
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+        <item>@color/dot_dark_screen5</item>
+    </array>
 
 
 </resources>
