--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,11 @@
         <item name="android:background">@drawable/bottom_sheet_background</item>
     </style>
 
+    <style name="Theme.MyDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="android:windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 
 
     <style name="CustomAlertDialog">
