--- a/app/src/main/res/layout/activity_set_dialog.xml
+++ b/app/src/main/res/layout/activity_set_dialog.xml
@@ -71,6 +71,19 @@
 
                 android:text="통계 보기" />
 
+        <TextView
+            android:id="@+id/share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+
+            android:background="?attr/selectableItemBackground"
+            android:textColor="@android:color/black"
+
+            android:text="공유 하기" />
+
             <TextView
                 android:id="@+id/evaluation"
                 android:layout_width="wrap_content"
