--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/free_icon_korean"
+        app:srcCompat="@drawable/korea"
         android:layout_margin="30dp"/>
 
 
