--- a/app/src/main/res/layout/page0.xml
+++ b/app/src/main/res/layout/page0.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="여섯 개의 자모로 풀어쓴 한글 단어 ''코들''을 여섯 번의 도전 안에 맞춰봅시다. 한글 단어를 풀어쓴 후 입력을 누르면 칸 색깔이 변합니다!"
+        android:text="여섯 개의 자모로 풀어쓴 한글 단어 ''훈들''을 여섯 번의 도전 안에 맞춰봅시다. 한글 단어를 풀어쓴 후 입력을 누르면 칸 색깔이 변합니다!"
         android:textColor="@android:color/black"
         android:textSize="14sp"/>
 
